Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47991

[REG] qdoc in 5.6: linking fails for certain functions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.0 Alpha
    • 5.6
    • Build tools: qdoc
    • None
    • c3736856fb27a416a8d42a96fc8dcb27b2bf30a2

      QDoc in 5.6 has improved capability to create a link to the correct function overload based on the number/types of function parameters. However, I noticed that some links are now failing, they used to work on 5.5:

      /work/build/_qt5/qtdeclarative/examples/qml/doc/src/qml-extending.qdoc:65: warning: Can't link to 'qmlRegisterExtendedType()'
      /work/build/_qt5/qtdeclarative/src/qml/doc/src/cppintegration/definetypes.qdoc:27: warning: Can't link to 'qmlRegisterExtendedType()'
      /work/build/_qt5/qtbase/src/corelib/kernel/qmetatype.cpp:2080: warning: Can't link to 'qRegisterMetaTypeStreamOperators()'
      /work/build/_qt5/qtbase/src/corelib/kernel/qmimedata.cpp:552: warning: Can't link to 'qRegisterMetaTypeStreamOperators()'
      
      • Both of the above functions have an internal/undocumented variant (that takes no parameters) in the root namespace, and another, documented one (that takes parameters). Apparently QDoc finds the first one (as it matches the signature exactly) and gives up as it's internal. The expected result is a link to these functions:

      http://doc-snapshots.qt.io/qt5-5.6/qqmlengine.html#qmlRegisterExtendedType

      http://doc-snapshots.qt.io/qt5-5.6/qmetatype.html#qRegisterMetaTypeStreamOperators

        For Gerrit Dashboard: QTBUG-47991
        # Subject Branch Project Status CR V

            gbk Martin Smith (Qt)
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes